--- a/src/ui/tab.css
+++ b/src/ui/tab.css
@@ -8,7 +8,7 @@ $headerColor: $newBlackColor2;
     border-radius: 2px;
 }
 .bk-tab.bk-tab-border-card {
-    .bk-tab-header {
+    >.bk-tab-header {
         height: 43px;
         border: $border;
         border-bottom: none;
@@ -65,7 +65,8 @@ $headerColor: $newBlackColor2;
     &::after {
         content: '';
         position: absolute;
-        bottom: 0;
+        bottom: var(--activeBarBottom);
+        top: var(----activeBarTop);
         left: var(--activeBarLeft);
         height: var(--activeBarHeight);
         width: var(--activeBarWidth);
