feature: (select-group)支持分组全选功能#143

--- a/src/ui/select.css
+++ b/src/ui/select.css
@@ -216,6 +216,7 @@ $disabledColor: #c4c6cc;
             font-size: var(--font-size);
             border-bottom: 1px solid $newGreyColor1;
             color: $newBlackColor3;
+            position: relative;
 
             &.is-collapse {
                 cursor: pointer;
@@ -231,6 +232,13 @@ $disabledColor: #c4c6cc;
                 &.readonly {
                     cursor: not-allowed;
                 }
+            }
+
+            .btn-check-all {
+                position: absolute;
+                disabled: inline-block;
+                right: 14px;
+                top: 2px;
             }
         }
     }
