feature: (select-group)修复分组全选功能和展开分组功能冲突#143

--- a/src/ui/select.css
+++ b/src/ui/select.css
@@ -239,6 +239,9 @@ $disabledColor: #c4c6cc;
                 disabled: inline-block;
                 right: 14px;
                 top: 2px;
+                .bk-form-checkbox {
+                    margin-right: 0!important;
+                }
             }
         }
     }
