--- a/src/ui/table.css
+++ b/src/ui/table.css
@@ -166,9 +166,11 @@ $tableInfoColor: #909399;
             text-align: center;
             cursor: pointer;
             color: #C4C6CC;
-            &.is-open,
+            &.is-open {
+                color: #63656e;
+            }
             &.is-filtered {
-                color: #63656E;
+                color: #3a84ff;
             }
         }
         .bk-table-caret-wrapper {
@@ -198,11 +200,11 @@ $tableInfoColor: #909399;
             }
         }
         &.ascending .bk-table-sort-caret.ascending {
-            border-bottom-color: #63656E;
+            border-bottom-color: #3a84ff;
         }
 
         &.descending .bk-table-sort-caret.descending {
-            border-top-color: #63656E;
+            border-top-color: #3a84ff;
         }
     }
 
