feat: bump to 2.4.1-beta.2

--- a/src/ui/slider.css
+++ b/src/ui/slider.css
@@ -31,6 +31,7 @@
         }
         .bk-slider-labels {
             position: relative;
+            font-size: $fnSmallSize;
             &.vertical {
                 left: 18px;
                 height: 100%;
@@ -141,6 +142,7 @@
         display: flex;
         align-items: center;
         justify-content: center;
+        font-size: $fnSmallSize;
         &.vertical {
             left: 28px;
         }
