--- a/src/ui/zoom-image.css
+++ b/src/ui/zoom-image.css
@@ -3,6 +3,7 @@
         width: 100%;
         height: 100%;
         cursor: pointer;
+        vertical-align: bottom;
     }
     .bk-full-screen {
         position: fixed;
