bugfix: table修复开启定位和自动行高拖动修改列宽，影响行高没有重新计算定位行高问题

--- a/example/css/app.css
+++ b/example/css/app.css
@@ -464,7 +464,7 @@ body {
         z-index: 1;
     }
 
-    .auto-height {
+    .row-auto-height {
         .demo-box {
             .demo-meta {
                 max-height: max-content;
