--- a/src/ui/table.css
+++ b/src/ui/table.css
@@ -237,6 +237,13 @@ $tableInfoColor: #909399;
         z-index: -1;
     }
 }
+
+.bk-table-row-auto-height {
+    .cell {
+        display: block;
+    }
+}
+
 .bk-table-group,
 .bk-table-border,
 .bk-table-outer-border {
