feat: bump to 2.4.5

--- a/src/ui/table.css
+++ b/src/ui/table.css
@@ -98,6 +98,7 @@ $tableInfoColor: #909399;
     th.is-leaf,
     td {
         border-bottom: $tableBorder;
+        height: 43px;
     }
 
     th.is-sortable {
