bugfix: [table]修复表格会被外部white-space样式影响问题

--- a/src/ui/pagination.css
+++ b/src/ui/pagination.css
@@ -5,6 +5,7 @@ $hoverBackground: #eaf3ff;
 
 .bk-page {
     overflow: hidden;
+    white-space: normal;
     .icon-angle-right, .icon-angle-left {
         line-height: 36px;
         font-size: $iconNormalSize;
