--- a/src/ui/table.css
+++ b/src/ui/table.css
@@ -13,6 +13,7 @@ $tableCurrentRowBackground: #ecf5ff;
 $tableInfoColor: #909399;
 
 .bk-table {
+    white-space: normal;
     position: relative;
     overflow: hidden;
     box-sizing: border-box;
