--- a/src/ui/select.css
+++ b/src/ui/select.css
@@ -475,3 +475,13 @@ $disabledColor: #c4c6cc;
         }
     }
 }
+
+.bk-select-bottom-loading {
+    position: relative;
+    text-align: center;
+    bottom: 0;
+    height: 32px;
+    line-height: 25px;
+    width: 100%;
+    z-index: 777;
+}
