--- a/src/ui/select.css
+++ b/src/ui/select.css
@@ -148,9 +148,15 @@ $disabledColor: #c4c6cc;
         font-size: var(--icon-size);
     }
     .bk-select-name {
+        width: 100%;
         height: 30px;
         padding: 0 36px 0 10px;
         @mixin ellipsis 100%, block;
+        border: none;
+        appearance: none;
+        &,&:hover,&:active{
+           outline: none;
+        }
     }
     .bk-tooltip.bk-select-dropdown {
         display: block;
@@ -344,7 +350,6 @@ $disabledColor: #c4c6cc;
         display: none;
     }
 }
-
 /* size */
 .bk-select-large {
     line-height: 36px;
@@ -469,4 +474,14 @@ $disabledColor: #c4c6cc;
             pointer-events: none;
         }
     }
+}
+
+.bk-select-bottom-loading {
+    position: relative;
+    text-align: center;
+    bottom: 0;
+    height: 32px;
+    line-height: 25px;
+    width: 100%;
+    z-index: 777;
 }
