bugfix(select): 调整下来选框禁用时箭头颜色

--- a/src/ui/select.css
+++ b/src/ui/select.css
@@ -96,6 +96,9 @@ $disabledColor: #c4c6cc;
         /* color: #c4c6cc; */
         cursor: not-allowed;
         border-color: #dcdee5;
+        .bk-select-angle {
+            color: #c4c6cc;
+        }
     }
     &.is-readonly,
     &.is-loading {
