--- a/src/ui/pagination.css
+++ b/src/ui/pagination.css
@@ -96,9 +96,9 @@ $hoverBackground: #eaf3ff;
         display: inline-block;
         > span {
             font-size: 14px;
-            color: $defaultPaginationTextColor;
+            color: #63656e;
         }
-    } 
+    }
     &.bk-page-align {
         &-left {
             text-align: left;
@@ -122,7 +122,7 @@ $hoverBackground: #eaf3ff;
             }
         }
         .bk-page-jumper {
-            font-size: $smallPaginationFontSize;
+            font-size: 14px;
         }
         .bk-page-total-count,
         .bk-page-selection-count {
