--- a/src/ui/divider.css
+++ b/src/ui/divider.css
@@ -1,10 +1,25 @@
 @import './variable.css';
 
 .bk-divider {
-    position: relative
-}
+  position: relative;
 
-.bk-divider-info {
+  &.bk-divider__vertical {
+    display: inline-block;
+    width: 0;
+    height: 1em;
+    margin: 0 8px;
+    verticalAlign: middle;
+  }
+
+  &.bk-divider__horizontal {
+    display: block;
+    width: 100%;
+    height: 0;
+    margin: 1em 0;
+    verticalAlign: middle;
+  }
+
+  .bk-divider-info {
     position: absolute;
     padding: 0 1.4em;
     color: $newBlackColor1;
@@ -21,4 +36,5 @@
     &-right {
         right: 2em;
     }
+  }
 }
