feature: Transfer穿梭框组件支持设置disabled状态和修复Transfer穿梭框组件设置排序不生效bug

--- a/src/ui/transfer.css
+++ b/src/ui/transfer.css
@@ -83,6 +83,11 @@
                     background-color: #eef6fe;
                     color: $newMainColor;
                 }
+                &.is-disabled {
+                    cursor: not-allowed;
+                    color: $newGreyColor;
+                    background-color: #fff;
+                }
                 .content-text {
                     flex: 1;
                     overflow: hidden;
