--- a/src/ui/popconfirm.css
+++ b/src/ui/popconfirm.css
@@ -5,17 +5,17 @@
     .popconfirm-split {
         display: inline-block;
         position: absolute;
-        top: 13px;
+        top: 9px;
         background-color: #dcdee5;
         width: 1px;
         height: 12px;
         margin-left: -2px;
     }
     &.popconfirm-more {
-        padding: 10px;
+        padding: 10px 14px;
         .popconfirm-content {
             .title {
-                font-size: 16px;
+                font-size: 14px;
                 color: #313238;
                 padding-bottom: 10px;
             }
@@ -27,7 +27,7 @@
             }
             .is-simple.content {
                 font-size: 14px;
-                line-height: 24px;
+                line-height: 22px;
             }
         }
         .popconfirm-operate {
@@ -63,7 +63,7 @@
                 }
             }
         }
-        .default-operate-button {
+        .default-operate-button[type="button"] {
             height: 26px;
             padding: 0 16px;
         }
