--- a/src/ui/sideslider.css
+++ b/src/ui/sideslider.css
@@ -65,8 +65,8 @@
         line-height: 60px;
         border-bottom: 1px solid #DCDEE5;
         font-size: 16px;
-        font-weight: bold;
-        color: #666;
+        /* font-weight: bold; */
+        color: $newBlackColor1;
     }
     &-content {
         overflow: auto;
