--- a/src/ui/popconfirm.css
+++ b/src/ui/popconfirm.css
@@ -12,7 +12,7 @@
         margin-left: -2px;
     }
     &.popconfirm-more {
-        padding: 10px 14px;
+        padding: 10px;
         .popconfirm-content {
             .title {
                 font-size: 14px;
