feat(table): 添加自定义表头文档示例

--- a/src/ui/table.css
+++ b/src/ui/table.css
@@ -54,7 +54,7 @@ $tableDarkHeaderHover: #eaebf0;
     }
     &.bk-table-custom-header-hover {
         --customHeaderColorHover: #fff;
-        th:hover {
+        th .cell:hover {
             background-color: var(--customHeaderColorHover)
         }
     }
