feat(navigation): 导航组件样式优化

--- a/src/ui/navigation.css
+++ b/src/ui/navigation.css
@@ -16,7 +16,7 @@
         .title-icon {
             flex: 0 0 28px;
             font-size: 28px;
-            color: #768197;
+            color: #96A2B9;
             display: flex;
             align-items: center;
             justify-content: center;
