--- a/src/ui/sideslider.css
+++ b/src/ui/sideslider.css
@@ -74,8 +74,9 @@
     &-footer {
         width: 100%;
         height: 54px;
-        border-top: 1px solid transparent;
-        background: #fff;
+        /* border-top: 1px solid transparent; */
+        border-top: 1px solid #dcdee5;
+        background-color: #fff;
         display: flex;
         align-items: center;
     }
