--- a/src/ui/version-detail.css
+++ b/src/ui/version-detail.css
@@ -173,7 +173,7 @@
         overflow: auto;
         @mixin scroller;
     }
-    .markdown-theme-style {
+    &-markdown-theme {
         font-size: 14px;
         color: #313238;
         h1,
@@ -185,13 +185,7 @@
             margin: 10px 0;
             font:
                 normal 14px/1.5
-                "Helvetica Neue",
-                Helvetica,
-                Arial,
-                "Lantinghei SC",
-                "Hiragino Sans GB",
-                "Microsoft Yahei",
-                sans-serif;
+                -apple-system,Helvetica Neue,Helvetica,Arial,PingFang SC,Microsoft YaHei,SimSun,sans-serif;
             font-weight: bold;
             color: #34383e;
         }
